--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,23 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-27 Thu 16:00]
+#+CAPTION: Clock summary at [2016-10-27 Thu 16:54]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *16:14* |       |      | 100.0 |
+| *Total time*                                                                | *17:07* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 16:14   |       |      | 100.0 |
-| Active                                                                      |         | 16:14 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   2.3 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |  15.0 |
+| Stories                                                                     | 17:07   |       |      | 100.0 |
+| Active                                                                      |         | 17:07 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   2.1 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |  14.2 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   1.4 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   3.9 |
-| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   3.8 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  43.1 |
-| STARTED Add artefact source properties support                              |         |       | 3:11 |  19.6 |
-| STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   3.3 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   3.7 |
+| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   3.6 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  40.9 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  18.6 |
+| STARTED Implement helper headers using wale                                 |         |       | 0:53 |   5.2 |
+| STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   3.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -195,7 +196,8 @@ Example changes to stitch template:
 - add a check to make sure all keys required by the template have been
   supplied and all keys supplied by the user have been used.
 
-*** STARTED Add artefact source properties support                    :story:
+*** COMPLETED Add artefact source properties support                  :story:
+    CLOSED: [2016-10-27 Thu 16:01]
     CLOCK: [2016-10-27 Thu 15:46]--[2016-10-27 Thu 16:00] =>  0:14
     CLOCK: [2016-10-27 Thu 14:40]--[2016-10-27 Thu 15:45] =>  1:05
     CLOCK: [2016-10-27 Thu 11:31]--[2016-10-27 Thu 12:14] =>  0:43
@@ -215,7 +217,8 @@ Examples:
 : quilt.cpp.serialization.class_header.formatting_style=stock
 : quilt.cpp.serialization.class_header.formatting_input=a/b/c.wale
 
-*** Implement helper headers using wale                               :story:
+*** STARTED Implement helper headers using wale                       :story:
+    CLOCK: [2016-10-27 Thu 16:01]--[2016-10-27 Thu 16:54] =>  0:53
 
 Tasks:
 
