--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,24 +14,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-27 Thu 16:54]
+#+CAPTION: Clock summary at [2016-10-31 Mon 12:05]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *17:07* |       |      | 100.0 |
+| *Total time*                                                                | *18:25* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 17:07   |       |      | 100.0 |
-| Active                                                                      |         | 17:07 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   7.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   2.1 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |  14.2 |
-| COMPLETED Add logo with white background                                    |         |       | 0:14 |   1.4 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   3.7 |
-| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   3.6 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  40.9 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  18.6 |
-| STARTED Implement helper headers using wale                                 |         |       | 0:53 |   5.2 |
-| STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   3.1 |
+| Stories                                                                     | 18:25   |       |      | 100.0 |
+| Active                                                                      |         | 18:25 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   6.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   2.0 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |  13.2 |
+| COMPLETED Add logo with white background                                    |         |       | 0:14 |   1.3 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   3.4 |
+| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   3.3 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  38.0 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  17.3 |
+| COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   3.0 |
+| STARTED Implement helper headers using wale                                 |         |       | 1:38 |   8.9 |
+| STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   2.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -217,7 +218,26 @@ Examples:
 : quilt.cpp.serialization.class_header.formatting_style=stock
 : quilt.cpp.serialization.class_header.formatting_input=a/b/c.wale
 
+*** COMPLETED Stitch not writing when template has changed            :story:
+    CLOSED: [2016-10-31 Mon 12:05]
+    CLOCK: [2016-10-31 Mon 11:56]--[2016-10-31 Mon 12:05] =>  0:09
+    CLOCK: [2016-10-31 Mon 11:31]--[2016-10-31 Mon 11:55] =>  0:24
+
+It seems we can change a text template but not get stitch to update
+the cpp file. We must have made a mistake on the binary diffing of the
+files.
+
+It seems this is related to the overwrite changes. We did not set the
+overwrite flag to true within stitch, so its (probably) defaulting to
+false; and since we are now honouring the flag, we don't
+write. Default it to true.
+
+This also highlights how badly named this flag is, since it now
+appears we are forcing an overwrite even when there are no differences
+even though this is not what the flag means at all.
+
 *** STARTED Implement helper headers using wale                       :story:
+    CLOCK: [2016-10-31 Mon 10:45]--[2016-10-31 Mon 11:30] =>  0:45
     CLOCK: [2016-10-27 Thu 16:01]--[2016-10-27 Thu 16:54] =>  0:53
 
 Tasks:
@@ -363,12 +383,6 @@ Random notes:
   to perform the stitching as part of knitter's workflows. Perhaps as
   part of the expansion, we could set a number of stitch fields which
   would then be picked up by some knit-specific workflow classes.
-
-*** Stitch not writing when template has changed                      :story:
-
-It seems we can change a text template but not get stitch to update
-the cpp file. We must have made a mistake on the binary diffing of the
-files.
 
 *** Rename project directory path                                     :story:
 
