--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,24 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-31 Mon 12:05]
+#+CAPTION: Clock summary at [2016-10-31 Mon 12:12]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *18:25* |       |      | 100.0 |
+| *Total time*                                                                | *18:31* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 18:25   |       |      | 100.0 |
-| Active                                                                      |         | 18:25 |      | 100.0 |
+| Stories                                                                     | 18:31   |       |      | 100.0 |
+| Active                                                                      |         | 18:31 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   6.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   2.0 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |  13.2 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |  13.1 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   1.3 |
 | COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   3.4 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   3.3 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  38.0 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  17.3 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  37.8 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  17.2 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   3.0 |
-| STARTED Implement helper headers using wale                                 |         |       | 1:38 |   8.9 |
+| STARTED Implement helper headers using wale                                 |         |       | 1:44 |   9.4 |
 | STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   2.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -237,6 +237,7 @@ appears we are forcing an overwrite even when there are no differences
 even though this is not what the flag means at all.
 
 *** STARTED Implement helper headers using wale                       :story:
+    CLOCK: [2016-10-31 Mon 12:06]--[2016-10-31 Mon 12:12] =>  0:06
     CLOCK: [2016-10-31 Mon 10:45]--[2016-10-31 Mon 11:30] =>  0:45
     CLOCK: [2016-10-27 Thu 16:01]--[2016-10-27 Thu 16:54] =>  0:53
 
