--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,24 +14,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-31 Mon 12:28]
+#+CAPTION: Clock summary at [2016-10-31 Mon 12:39]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *18:46* |       |      | 100.0 |
+| *Total time*                                                                | *18:56* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 18:46   |       |      | 100.0 |
-| Active                                                                      |         | 18:46 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   6.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   2.0 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |  13.0 |
+| Stories                                                                     | 18:56   |       |      | 100.0 |
+| Active                                                                      |         | 18:56 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   6.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   1.9 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |  12.9 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   1.2 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   3.4 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   3.3 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   3.3 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  37.3 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  17.0 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  37.0 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  16.8 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   2.9 |
-| STARTED Implement helper headers using wale                                 |         |       | 1:59 |  10.6 |
+| STARTED Implement helper headers using wale                                 |         |       | 2:09 |  11.4 |
 | STARTED Changes to stitch to accommodate wale                               |         |       | 0:32 |   2.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -237,6 +237,7 @@ appears we are forcing an overwrite even when there are no differences
 even though this is not what the flag means at all.
 
 *** STARTED Implement helper headers using wale                       :story:
+    CLOCK: [2016-10-31 Mon 12:29]--[2016-10-31 Mon 12:39] =>  0:10
     CLOCK: [2016-10-31 Mon 12:13]--[2016-10-31 Mon 12:28] =>  0:15
     CLOCK: [2016-10-31 Mon 12:06]--[2016-10-31 Mon 12:12] =>  0:06
     CLOCK: [2016-10-31 Mon 10:45]--[2016-10-31 Mon 11:30] =>  0:45
