--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,27 +14,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-01 Tue 14:40]
+#+CAPTION: Clock summary at [2016-11-01 Tue 18:04]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *27:15* |       |      | 100.0 |
+| *Total time*                                                                | *29:37* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 27:15   |       |      | 100.0 |
-| Active                                                                      |         | 27:15 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   4.5 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   1.3 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |   8.9 |
-| COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.9 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   2.3 |
-| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   2.3 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  25.7 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  11.7 |
-| COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   2.0 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   9.8 |
-| COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.8 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  13.9 |
-| STARTED Changes to stitch to accommodate wale                               |         |       | 4:02 |  14.8 |
+| Stories                                                                     | 29:37   |       |      | 100.0 |
+| Active                                                                      |         | 29:37 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   4.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   1.2 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |   8.2 |
+| COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.8 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   2.1 |
+| COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   2.1 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  23.6 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |  10.7 |
+| COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.9 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   9.0 |
+| COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.7 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |  12.8 |
+| STARTED Changes to stitch to accommodate wale                               |         |       | 6:24 |  21.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -279,6 +279,7 @@ When we implemented profiles we didn't add them to stitch. Add them
 and remove all duplication from stitch templates.
 
 *** STARTED Changes to stitch to accommodate wale                     :story:
+    CLOCK: [2016-11-01 Tue 16:00]--[2016-11-01 Tue 18:04] =>  2:04
     CLOCK: [2016-11-01 Tue 15:41]--[2016-11-01 Tue 15:59] =>  0:18
     CLOCK: [2016-11-01 Tue 14:02]--[2016-11-01 Tue 14:39] =>  0:37
     CLOCK: [2016-11-01 Tue 12:11]--[2016-11-01 Tue 12:29] =>  0:18
